--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ python-json-logger = "^2.0.7"
 fastapi-cache2 = {extras = ["redis"], version = "^0.2.1"}
 python-jose = "^3.3.0"
 flower = "^2.0.1"
+jinja2 = "^3.1.2"
 
 
 [tool.poetry.dev-dependencies]
