добавлено проксирование посредством caddy

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,19 +2,32 @@ version: "3.8"
 name: auth
 
 services:
-   nginx:
-     build:
-       context: .
-       dockerfile: "Dockerfile.nginx"
-     container_name: auth_nginx
-     depends_on:
-       - auth_service
+   caddy:
+     image: caddy:latest
+     container_name: auth_caddy
      ports:
       - "80:80"
       - "443:443"
+     volumes:
+      - ./Caddyfile:/etc/caddy/Caddyfile
+      - ./certs:/caddy/certs
+     depends_on:
+      - auth_service
      networks:
-       - auth
+      - auth
 
+#   nginx:
+#     build:
+#       context: .
+#       dockerfile: "Dockerfile.nginx"
+#     container_name: auth_nginx
+#     depends_on:
+#       - auth_service
+#     ports:
+#      - "80:80"
+#      - "443:443"
+#     networks:
+#       - auth
 
    auth_service:
      build:
