--- a/.github/workflows/mypy.yaml
+++ b/.github/workflows/mypy.yaml
@@ -19,6 +19,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install mypy
+          pip install mypy types-redis
 
       - name: Run MyPy
         run: |
