Изменен файл сборки

--- a/.env-non-dev
+++ b/.env-non-dev
@@ -22,3 +22,9 @@ SMTP_HOST=smtp.gmail.com
 SMTP_PORT=465
 SMTP_USER=xxx@gmail.com
 SMTP_PASS=xxx
+SMTP_CADDY_USER=xxx@mail.ru
+
+# telegram
+BOT_TOKEN=xxx
+CHAT_ID=xxx
+TG_DOMAIN=https://api.telegram.org
