--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,8 +13,8 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      DOMAIN: ${{ env.domain }}
-      SMTP_CADDY_USER: ${{ env.smtp_caddy_user }}
+      DOMAIN: ${{ env.DOMAIN }}
+      SMTP_CADDY_USER: ${{ env.SMTP_CADDY_USER }}
 
     steps:
       - name: Checkout code
