--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      DOMAIN: ${{ env.DOMAIN }}
+      DOMAIN: ${{ secrets.DOMAIN }}
       SMTP_CADDY_USER: ${{ secrets.SMTP_CADDY_USER }}
 
     steps:
