--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ fastapi-cache2 = {extras = ["redis"], version = "^0.2.1"}
 python-jose = "^3.3.0"
 flower = "^2.0.1"
 jinja2 = "^3.1.2"
+pyhumps = "^3.8.0"
 
 
 [tool.poetry.dev-dependencies]
